:bug: Align top border closes #144

--- a/frontend/themes/komunumo/views/website/news-block.css
+++ b/frontend/themes/komunumo/views/website/news-block.css
@@ -16,6 +16,10 @@
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  */
 
+.website .news-block {
+    margin-top: 0;
+}
+
 .website .news-block vaadin-horizontal-layout > div:first-of-type {
     width: 50%;
 }
